# ai-olive

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY-HOSTED.md  DEPLOY.md  Makefile  PRD.md  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
chat-service/: README.md  pyproject.toml
chat-service/alembic/: env.py
chat-service/alembic/versions/: 0001_init_chat_schema.py  0002_chat_attachments.py  0003_user_password.py
chat-service/chat_service/: __init__.py  config.py
chat-service/chat_service/application/ports/: attachment_repository.py  cancellation_store.py  llm_client.py  session_repository.py  user_repository.py
chat-service/chat_service/application/use_cases/: authenticate_user.py  cancel_stream.py  create_session.py  list_sessions.py  process_attachment.py  register_user.py  send_text_message.py  stream_assistant_response.py  upload_attachment.py
chat-service/chat_service/domain/: errors.py
chat-service/chat_service/domain/entities/: attachment.py  message.py  session.py  user.py
chat-service/chat_service/domain/services/: context_builder.py
chat-service/chat_service/domain/value_objects/: attachment_kind.py  message_role.py  message_status.py  model_config.py  parse_status.py  session_status.py  streaming_response.py
chat-service/chat_service/infrastructure/auth/: jwt_issuer.py  jwt_verifier.py  password_hasher.py
chat-service/chat_service/infrastructure/cache/: redis_cancellation_store.py
chat-service/chat_service/infrastructure/persistence/: engine.py  postgres_attachment_repo.py  postgres_session_repo.py  postgres_user_repo.py  sqlalchemy_models.py
chat-service/chat_service/infrastructure/sdk/: anthropic_llm_client.py  sdk_llm_client.py
chat-service/chat_service/interfaces/http/: app.py  dependencies.py  main.py  schemas.py
chat-service/tests/: conftest.py
chat-service/tests/application/: test_auth.py  test_cancel_stream.py  test_create_session.py  test_list_sessions.py  test_process_attachment.py  test_send_text_message.py  test_stream_assistant_response.py  test_upload_attachment.py  test_use_cases_smoke.py
chat-service/tests/domain/: test_context_builder.py  test_session_behavior.py  test_session_smoke.py  test_streaming_response.py
chat-service/tests/infrastructure/: conftest.py  test_anthropic_llm_client.py  test_jwt_verifier.py  test_postgres_session_repo.py  test_redis_cancellation_store.py  test_sdk_llm_client.py
chat-service/tests/interfaces/: test_attachment_endpoints.py  test_http_api.py  test_jwt_auth.py
dashboard-service/: pyproject.toml
dashboard-service/dashboard_service/: config.py
dashboard-service/dashboard_service/application/ports/: metrics_reader.py
dashboard-service/dashboard_service/application/use_cases/: metric_queries.py
dashboard-service/dashboard_service/domain/: window.py
dashboard-service/dashboard_service/infrastructure/clickhouse/: clickhouse_metrics_reader.py
dashboard-service/dashboard_service/interfaces/http/: app.py  dependencies.py  schemas.py
dashboard-service/tests/application/: test_metric_queries.py
dashboard-service/tests/infrastructure/: test_clickhouse_metrics_reader.py
dashboard-service/tests/interfaces/: test_http_metrics.py
ingestion-service/: README.md  pyproject.toml
ingestion-service/ingestion_service/: __init__.py  config.py
ingestion-service/ingestion_service/application/ports/: auth_provider.py  log_stream.py
ingestion-service/ingestion_service/domain/: errors.py
ingestion-service/ingestion_service/interfaces/http/: app.py  (+3 more)
ingestion-service/tests/application/: test_ingest_logs.py  test_ingest_logs_smoke.py
ingestion-service/tests/infrastructure/: conftest.py  test_api_key_auth.py  test_redis_stream.py
ingestion-service/tests/interfaces/: test_logs_endpoint.py  test_logs_smoke.py
logging-sdk/: README.md  pyproject.toml
logging-sdk/olive_sdk/: __init__.py  client.py
logging-sdk/olive_sdk/application/: emitter_port.py  tracker.py
logging-sdk/tests/: test_client.py
logging-sdk/tests/application/: test_tracker.py  test_tracker_smoke.py
logging-sdk/tests/domain/: test_cost_calculator.py  test_cost_calculator_smoke.py
logging-sdk/tests/infrastructure/: test_anthropic_adapter.py  test_anthropic_adapter_smoke.py  test_composite_and_breaker.py  test_deepseek_adapter.py  test_file_emitter.py  test_gemini_adapter.py  test_http_emitter.py  test_openai_adapter.py
media-service/: README.md  pyproject.toml
media-service/media_service/: __init__.py
media-service/media_service/domain/: errors.py
media-service/tests/application/: test_parse_document.py  test_transcribe_audio.py
media-service/tests/domain/: test_media_domain.py
media-service/tests/infrastructure/: conftest.py  test_faster_whisper_transcriber.py  test_in_memory_object_storage.py  test_parsers.py
shared/contracts/: pyproject.toml
shared/contracts/contracts/: __init__.py  log_event.py
shared/contracts/tests/: test_log_event_smoke.py  test_log_event_validation.py
shared/observability/: pyproject.toml
shared/observability/olive_obs/: __init__.py  fastapi_setup.py  health.py  logging.py  metrics.py  request_id.py
shared/observability/tests/: test_health.py  test_logging.py  test_metrics.py  test_request_id.py
shared/testing/: pyproject.toml
shared/testing/testing_support/: __init__.py
worker-service/: README.md  pyproject.toml
worker-service/alembic/: env.py
worker-service/alembic/versions/: 0001_init_logs_schema.py
worker-service/tests/application/: test_process_log_event.py  test_process_log_event_metrics.py  test_process_log_event_smoke.py  test_worker_loop.py
worker-service/tests/domain/: test_processing_domain_smoke.py  test_redactors.py
worker-service/tests/infrastructure/: conftest.py  test_clickhouse_metrics_sink.py  test_postgres_log_repo.py  test_redis_dead_letter_sink.py  test_redis_stream_consumer.py  test_redis_stream_consumer_timeout.py
worker-service/worker_service/: __init__.py  config.py
worker-service/worker_service/application/: worker_loop.py
(+145 files in other folders)
