[project]
name = "ai-olive"
version = "0.1.0"
description = "LLM Inference Logging & Ingestion Platform (monorepo workspace root)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[dependency-groups]
dev = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "shared/contracts",
    "shared/testing",
]
