[project]
name = "ai-olive"
version = "0.1.0"
description = "LLM Inference Logging & Ingestion Platform (monorepo workspace root)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9,<1.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=8",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "shared/contracts",
    "shared/testing",
    "chat-service",
    "logging-sdk",
    "ingestion-service",
    "worker-service",
    "media-service",
]

# ---------------------------------------------------------------------------
# Tooling configuration shared across all workspace members.
# Per-service overrides live in each service's own pyproject.toml.
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "ui",
    "**/migrations/**",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "PT",   # flake8-pytest-style
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# asserts (S101), dummy creds (S105/S106), and sync pathlib reads in
# async tests (ASYNC240) are fine in tests.
"**/tests/**" = ["S101", "S105", "S106", "ASYNC240"]
"**/test_*.py" = ["S101", "S105", "S106", "ASYNC240"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_decorators = true
# Each service has its own tests/infrastructure/conftest.py etc — without
# namespace package + explicit base they collide on the same module path.
plugins = ["pydantic.mypy"]
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "ui/",
    # Alembic env.py and migrations are loaded by the alembic CLI, not as
    # packages. Multiple services each carry their own alembic/env.py
    # which collide on the module name `alembic.env` for mypy.
    "^.*/alembic/.*$",
    # Per-service conftest.py files collide on the module path
    # `tests.{layer}.conftest`. They're only loaded by pytest and pytest
    # doesn't care; mypy still type-checks the test files themselves.
    "^.*/tests/.*/conftest\\.py$",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["testcontainers.*", "faster_whisper", "faster_whisper.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = [
    "shared",
    "chat-service",
    "logging-sdk",
    "ingestion-service",
    "worker-service",
    "media-service",
    "dashboard-service",
    "tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:testcontainers.*",
]
