[project]
name = "chat-service"
version = "0.1.0"
description = "Chat plane — sessions, messages, SSE streaming (PRD §6.1)"
requires-python = ">=3.11"
dependencies = [
    "olive-contracts",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_service"]

[tool.uv.sources]
olive-contracts = { workspace = true }
