[project]
name = "chat-service"
version = "0.1.0"
description = "Chat plane — sessions, messages, SSE streaming (PRD §6.1)"
requires-python = ">=3.11"
dependencies = [
    "olive-contracts",
    "olive-sdk",
    "media-service",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis>=5.0",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.7",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_service"]

[tool.uv.sources]
olive-contracts = { workspace = true }
olive-sdk = { workspace = true }
media-service = { workspace = true }
