[project]
name = "dashboard-service"
version = "0.1.0"
description = "Read-only analytics API over ClickHouse (PRD §7.7)"
requires-python = ">=3.11"
dependencies = [
    "olive-contracts",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiochclient>=2.6",
    "aiohttp>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard_service"]

[tool.uv.sources]
olive-contracts = { workspace = true }
