[project]
name = "ingestion-service"
version = "0.1.0"
description = "HTTP intake → Redis Streams for LogEvents (PRD §6.3)"
requires-python = ">=3.11"
dependencies = [
    "olive-contracts",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "testcontainers[redis]>=4.7",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion_service"]

[tool.uv.sources]
olive-contracts = { workspace = true }
