[project]
name = "media-service"
version = "0.1.0"
description = "Voice transcription + document parsing for AI-OLive (PRD §6.5)"
requires-python = ">=3.11"
dependencies = [
    "olive-contracts",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "pypdf>=4.3",
    "python-docx>=1.1",
    "aioboto3>=13.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["media_service"]

[tool.uv.sources]
olive-contracts = { workspace = true }
