[project]
name = "worker-service"
version = "0.1.0"
description = "Worker that drains the inference_logs Redis Stream into Postgres (PRD §6.4)"
requires-python = ">=3.11"
dependencies = [
    "olive-contracts",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres,redis]>=4.7",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker_service"]

[tool.uv.sources]
olive-contracts = { workspace = true }
