[project]
name = "olive-contracts"
version = "0.1.0"
description = "Shared Pydantic data contracts for the AI-OLive platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts"]
