[project]
name = "olive-obs"
version = "0.1.0"
description = "Shared observability for AI-OLive: structlog, request-id, Prometheus, health (PRD §9.1-9.3)"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "starlette>=0.37",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "fastapi>=0.115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["olive_obs"]
