[project]
name = "olive-testing"
version = "0.1.0"
description = "Shared test fixtures and helpers for the AI-OLive platform"
requires-python = ">=3.11"
dependencies = [
    "olive-contracts",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["testing_support"]

[tool.uv.sources]
olive-contracts = { workspace = true }
